--- a/paper.tex
+++ b/paper.tex
@@ -566,7 +566,7 @@ For a torus theta pair $(T,\theta)$ with associated Frobenius conjugacy classes 
     g_{T,\rho}(\theta,\psi,\chi) := \varepsilon_{\algebraicGroup{
     \tilde{T}}}\sum_{t\in \tilde{T}} \tilde{\theta}(t)\chi(det(t))\psi(tr(t)).
 \]
-\calivn{check $\epsilon$ factors and Hasse-Davenport} The following lemma shows that this is well defined.
+\calvin{check $\epsilon$ factors and Hasse-Davenport} The following lemma shows that this is well defined.
 \begin{lemma}
 \label{lemma:gl_invariance}
 \begin{enumerate}[(i)]
