--- a/paper.tex
+++ b/paper.tex
@@ -423,7 +423,7 @@ Here $\varepsilon_{\algebraicGroup{G}} = \left(-1\right)^{\mathrm{rel.rank} \alg
 
 \subsubsection{Gauss sum notations}
 If $\alpha \colon \multiplicativegroup{\finiteFieldExtension{n}} \to \multiplicativegroup{\cComplex}$ is a character, denote the \emph{Gauss sum} $$\tau\left(\alpha, \fieldCharacter_n\right) = -q^{-\frac{n}{2}}\sum_{x \in \multiplicativegroup{\finiteFieldExtension{n}}} \alpha\left(x\right) \fieldCharacter_n\left(x\right),$$
-where $\fieldCharacter_n \colon \finiteFieldExtension{n} \to \multiplicativegroup{\cComplex}$ is given by $\fieldCharacter_n = \fieldCharacter \circ \trace_{\finiteFieldExtension{n} \slash \finiteField}$. If $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ is a character and if $\alpha$ is as above, denote the \emph{twisted Gauss sum}
+where $\fieldCharacter_n \colon \finiteFieldExtension{n} \to \multiplicativegroup{\cComplex}$ is given by $\fieldCharacter_n = \fieldCharacter_{\finiteField} \circ \trace_{\finiteFieldExtension{n} \slash \finiteField}$. If $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ is a character and if $\alpha$ is as above, denote the \emph{twisted Gauss sum}
 $$\tau\left(\alpha \times \chi, \fieldCharacter_n\right) = -q^{-\frac{n}{2}}\sum_{x \in \multiplicativegroup{\finiteFieldExtension{n}}} \alpha\left(x\right) \chi\left( \FieldNorm{n}{1}\left(x\right)\right) \fieldCharacter_n\left(x\right).$$
 
 If $m \ge 1$, we denote 
@@ -561,12 +561,41 @@ for large enough $n$, where $N_{T(\mathbb{F}^n):T(\mathbb{F})}(t) = t\cdot F(t)\
 \end{tabular}
 \end{center}
 
+\subsubsection{Invariance under geometric conjugacy}
+\calvin{todo:type in some motivation for class functions whose product doesn't depend on geometric conjugacy, gamma functions whatever}.
+
+\begin{definition}
+	A \emph{stable function} on $G(\mathbb{F})$ is a class function $f$ such that $\sum_{g \in G} f(g)\pi(g)$ is a scalar which only depends on the Lusztig packet for $\pi$. \calvin{FUNCTORIAL TRANSFER FOR REDUCTIVE GROUPS AND CENTRAL
+COMPLEXES has this definition}
+\end{definition}
+
+A basic example of a class function which doesn't depend of geometric conjugacy 
+\begin{proposition}[FIND SOMEWHERE TO CITE or put in appendix]
+\label{prop:central_char}
+    Any function supported on the center of $G(\mathbb{F})$ is a stable function. \calvin{maybe add in connected group} 
+\end{proposition}
+\begin{proof}
+\calvin{todo. Here is a sketch. Use the definition of RTtheta to show for all torus theta pairs $(T,\theta)$, central element $x$ acts by scalar (in fact the scalar $\theta(x)$). This can also be showed using the character formula plus the ``only one cuspidal'' trick but it is probably overkill. Then if two pairs are conjugate, their hom dimesnion is nonzero, hence $x$ the scalar in both RTThetas} 
+\end{proof}
+
+
+The main result of this subsection is 
+\begin{theorem}
+\label{thm:indep_geo_conj}
+	$\Phi_{\chi}(g)$ is a stable function.
+	%Equivalently	$\frac{\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)}$ only depends on the geometric conjugacy class of $(T,\theta)$.
+\end{theorem}
+
+In the $GL_n$ case this follows from theorem \ref{thm:gln-doubling-gauss-sum-in-terms-of-kondo} along with \calvin{Hasse-Davenport? Something else?}.
+
+
 For a torus theta pair $(T,\theta)$ with associated Frobenius conjugacy classes $w \in W(\mathbb{T})$ and $(s) \subset G^*$ and an embedding $\rho:G^* \to  GL_n$.  Fix a Frobenius stable maximal torus $\mathbb{T}^* \subset G^*$ and a Frobenius stable maximal torus $\mathbb{T} \subset GL_n$ which contains $\rho(\mathbb{T}^*)$. Let $\tilde{T}$ be the torus of $GL_n$ corresponding to the Frobenius conjugacy class of $\rho(w) \in W(\mathbb{T})$ and $\tilde{\theta}$ such that $(\rho(s)) = (s_{\tilde{T},\tilde{\theta}})$. Define
 \[
     g_{T,\rho}(\theta,\psi,\chi) := \varepsilon_{\algebraicGroup{
     \tilde{T}}}\sum_{t\in \tilde{T}} \tilde{\theta}(t)\chi(det(t))\psi(tr(t)).
 \]
-\calvin{check $\epsilon$ factors and Hasse-Davenport} The following lemma shows that this is well defined.
+The following lemma shows that this is well defined.
+
 \begin{lemma}
 \label{lemma:gl_invariance}
 \begin{enumerate}[(i)]
@@ -577,9 +606,9 @@ For a torus theta pair $(T,\theta)$ with associated Frobenius conjugacy classes 
 \begin{proof}
 (i) In this case when $T = \Pi_{i} \mathbb{F}^{n_i}$ and $\theta = \Pi_{i} \alpha_i$, we recover the Gauss sum
 \[
-	g_{T,\rho}(\theta,\psi,\chi)  = \varepsilon_{\algebraicGroup{T}} \Pi_i \tau(\alpha_i \times (\chi\circ Nm),\psi) .
+	g_{T,\rho}(\theta,\psi,\chi)  = \Pi_i \tau(\alpha_i \times (\chi\circ Nm),\psi).
 \]
-By by the Hasse-Davenport relation depends only on the geometric conjugacy class of $(T,\theta)$ hence the semisimple conjugacy class of $(s_{T,\theta})$ \calvin{maybe write more or less?}. 
+By the Hasse-Davenport relation depends only on the geometric conjugacy class of $(T,\theta)$ hence the semisimple conjugacy class of $(s_{T,\theta})$ \calvin{maybe write more or less?}. 
 \\
 (ii) For a Frobenius stable semisimple conjugacy class $(s)$ in $GL_n$ in $GL_n$, we define
 \[
@@ -600,14 +629,25 @@ Suppose that $(T,\theta)(T',\theta')$ are geometrically conjugate torus characte
 Both are equal to $g_{(\rho(s_{T,\theta}))}(\psi,\chi) = g_{(\rho(s_{T',\theta'}))}(\psi,\chi)$.
 \end{proof}
 
-\subsubsection{Invariance under geometric conjugacy in Theorem \ref{thm:thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}}
-The main result of this subsection is 
-\begin{theorem}
-\label{thm:indep_geo_conj}
-	$\frac{\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi}}{R_{T,\theta}(1)}$ only depends on the geometric conjugacy class of $(T,\theta)$.
-\end{theorem}
+The idea behind the proof of this theorem \ref{thm:indep_geo_conj} is that the formula from Theorem \ref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} relates $\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi}/R_{T,\theta}(1)$ to $g_{T,\rho}(\theta,\psi,\chi)$ for the appropriate $\rho$ in the table below. 
+\begin{center}
+\begin{tabular}{ c c}
+ Group & Dual group representations $\rho$ \\ 
+ $Sp(2n)$ &$SO(2n+1) \to GL(2n+1)$\\  
+ $GSp(2n)$  &$GSpin(2n+1) \to GL(2n+1)$ \\
+ $SO(2n)$ &$SO(2n) \to GL(2n)$ \\
+ $GO(2n)$ & ? \\
+ $SO(2n+1)$ &$Sp(2n) \to GL(2n)$ \\
+ $GO(2n+1)$ & ? \\ 
+  $U(n)$  & $U(n) \to GL(2n)$  
+\end{tabular}
+\end{center}
+Note that in the $SO$ and $GSO$ case, the map $\rho$ sends the split torus of $G^*$ into the split torus of $GL(2n)$ and the induced map of cocharacters sends $x \mapsto (x,-x)$. In the $Sp,GSp$ cases the map is similar: the induced map of cocharacters sends $x \mapsto (x,1,-x)$. In the unitary case, the torus whose $\mathbb{F}$ points are $(\mathbb{F}_2^{Nm=1})^n \subset G^*(\mathbb{F})$ includes into the torus in $GL(2n)$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^\times)^n$ and the induced map of cocharacters is $(x_1,x_2, \hdots, x_n) \mapsto (x_1,-x_1,x_2,-x_2, \hdots ,x_n,-x_n)$. 
 
-The idea of the proof is that the formula from Theorem \ref{thm:thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} relates $\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi}/R_{T,\theta}(1)$ to $g_{T,\rho}(\theta,\psi,\chi)$ for an appropriate $\rho$. We will need the following computation:
+
+In particular to analyze $g_{T,\rho}(\theta,\psi,\chi)$ for these $\rho$, we need to understand what torus theta pair of $GL$ corresponds to $\phi((s))$ under a map $\phi(x) = (x,-x)$:
+%The following computation in the proof of theorem \ref{thm:indep_geo_conj}.
+
 \begin{lemma}
 \label{lem:cochar_computation}
     Define $\phi:(\mathbb{Q}/\mathbb{Z})_{p'}^n \to (\mathbb{Q}/\mathbb{Z})_{p'}^{2n} = X_*(GL_{2n})_{(\mathbb{Q}/\mathbb{Z})_{p'}}$ by $\phi(x) = (x,-x)$. We will consider two different Frobeinus actions on these characters:
@@ -638,30 +678,20 @@ Thus the result follows from the computations:\\
 \end{align*}
 \end{proof}
 
-Now we fix representations $\rho$ of the dual groups:
-\begin{center}
-\begin{tabular}{ c c}
- Group & Dual group representations $\rho$ \\ 
- $Sp(2n)$ &$SO(2n+1) \to GL(2n+1)$\\  
- $GSp(2n)$  &$GSpin(2n+1) \to GL(2n+1)$ \\
- $SO(2n)$ &$SO(2n) \to GL(2n)$ \\
- $GO(2n)$ & ? \\
- $SO(2n+1)$ &$Sp(2n) \to GL(2n)$ \\
- $GO(2n+1)$ & ? \\ 
-  $U(n)$  & $U(n) \to GL(2n)$  
-\end{tabular}
-\end{center}
-Note that in the $SO$ and $GSO$ case, the map $\rho$ sends the split torus of $G^*$ into the split torus of $GL(2n)$ and the induced map of cocharacters sends $x \mapsto (x,-x)$. In the $Sp,GSp$ cases the map is similar: the induced map of cocharacters sends $x \mapsto (x,1,-x)$. In the unitary case, the torus whose $\mathbb{F}$ points are $(\mathbb{F}_2^{Nm=1})^n \subset G^*(\mathbb{F})$ includes into the torus in $GL(2n)$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^\times)^n$ and the induced map of cocharacters is $(x_1,x_2, \hdots, x_n) \mapsto (x_1,-x_1,x_2,-x_2, \hdots ,x_n,-x_n)$. In all these cases we can apply lemma \ref{lem:cochar_computation}:
 
-\begin{proof}[Proof of theorem \ref{thm:indep_geo_conj}] Let $T$ be a torus in $G$ and suppose $T \cong \prod_{j=1}^r \multiplicativegroup{\finiteFieldExtension{k_j}} \times \prod_{i=1}^s \finiteFieldExtension{2m_i}^1$. We compute $g_{T,\rho}(\theta,\psi,\chi)$ using the the split torus $\mathbb{T}^*$ in $G^*$ including into the split torus $\mathbb{T}'$ in $GL$ in the non unitary case and in the unitary case we use the tori $\mathbb{T}^*$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^{Nm=1})^n \subset G^*(\mathbb{F})$ includes into the torus $\mathbb{T}'$ in $GL(2n)$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^\times)^n$. We then define $\tilde{T}$ as the $\mathbb{F}$-rational torus corresponding to the Frobenius stable Weyl group orbit of $\rho(w)$ inside $W(\mathbb{T}')$ where $(w)$ inside $W(\mathbb{T}^*)$ is the Frobenius stable Weyl group orbit associated to $T$. Lemma \ref{lem:cochar_computation} above implies that
+
+
+\begin{proof}[Proof of theorem \ref{thm:indep_geo_conj}] 
+By theorem \ref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}, it is enough to show that $g_{T}(\chi,\theta,\psi)$ and $\omega_{\pi}(-1) = \theta(-1)$ only depend of the geometric conjugacy of $(T,\theta)$. The latter only depends on geometric conjugacy by proposition \ref{prop:central_char}.\\
+
+Suppose $T \cong \prod_{j=1}^r \multiplicativegroup{\finiteFieldExtension{k_j}} \times \prod_{i=1}^s \finiteFieldExtension{2m_i}^1$. We compute $g_{T,\rho}(\theta,\psi,\chi)$ using the the split torus $\mathbb{T}^*$ in $G^*$ including into the split torus $\mathbb{T}'$ in $GL$ in the non unitary case and in the unitary case we use the tori $\mathbb{T}^*$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^{Nm=1})^n \subset G^*(\mathbb{F})$ includes into the torus $\mathbb{T}'$ in $GL(2n)$ whose $\mathbb{F}$ points are $(\mathbb{F}_2^\times)^n$. We then define $\tilde{T}$ as the $\mathbb{F}$-rational torus corresponding to the Frobenius stable Weyl group orbit of $\rho(w)$ inside $W(\mathbb{T}')$ where $(w)$ inside $W(\mathbb{T}^*)$ is the Frobenius stable Weyl group orbit associated to $T$. Lemma \ref{lem:cochar_computation} above implies that
 \[
-g_{T,\rho}(\theta,\psi,\chi)= \varepsilon_{\algebraicGroup{T}}\varepsilon_{\algebraicGroup{\tilde{T}}}g_{T}(\theta,\psi,\chi) \cdot \begin{cases}
+g_{T,\rho}(\theta,\psi,\chi)= g_{T}(\theta,\psi,\chi) \cdot \begin{cases}
         1  & G \neq Sp, GSp\\
         \tau(1,\psi_1) & G = Sp \textnormal{ or } GSp
-    \end{cases}
+    \end{cases}.
 \]
-where $g_T(\theta,\psi,\chi)$ is the expression from theorem \ref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}. \calvin{how does $\epsilon$ depend on $w$? Is the product always one?}.
-Corollary \ref{cor:geoconj} then implies that $g_T(\theta,\psi,\chi)$ only depends on the geometric conjugacy class of $(T,\theta)$. Now the formula for $\dblVirtualGaussSumScalar{R_{T, \theta}}{\chi}$ in theorem \ref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} finishes the proof.
+Corollary \ref{cor:geoconj} then implies that $g_T(\theta,\psi,\chi)$ only depends on the geometric conjugacy class of $(T,\theta)$. 
 \begin{comment}
 We will have to treat the unitary group case seperatedly. First for the non-unitary group case:\\
 
